tests/NormalTests/paczka1/fuzzy1/48309757.err
Error in line 8: 0ocTm S566 U0U,4
Error in line 2: 0ocTm S566 80,0
Error in line 19: Spn10hkgFD S566 2,6
Error in line 20: Spn10hkgFD S910 78,4
Error in line 28: Q269h0zTO S361 7,1
Error in line 14: QDrIl S361 62,7
